--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "body-parser": "^1.16.0",
     "ejs": "^2.5.5",
     "express": "^4.14.1",
-    "jsonwebtoken": "^7.2.1",
     "mongodb": "^2.2.22",
+    "mongoose": "^4.8.1",
+    "njwt": "^0.4.0",
     "uuid": "^3.0.1",
     "whatwg-fetch": "^2.0.2"
   }
